Changes for WinMerge compile:

2006-11-05 Kimmo Varis <kimmov@winmerge.org>
	* scew/win32/scew.dsp: Added post-build commands to copy
	lib files to /Build/expat
	* scew/win32/scew.dsp: Added include path to expat for one
	target (missed in previous commit)

2006-11-01 Kimmo Varis <kimmov@winmerge.org>

	* scew/win32/scew.dsp: added library paths to WinMerge /Build/expat

**** Changes in version 0.3.2 ****

2004-05-23  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* src (Module): Added stream functionality.

2004-03-20  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* by now just some minor fixes.

**** Changes in version 0.3.1 ****

2004-01-26  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* src/writer.*: write functions moved from tree to new writer
	files.

2004-01-25  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* src/xtree.*: added XML preamble support.

2003-12-09  Brodie Thiesfield

        * re-jigged the source tree to make building and installing as a
        common system library on Windows easier.

        * src directory renamed scew to keep consistency of code on
        both Unix and Windows platforms. Enables cross platform building
        of code always using #include <scew/scew.h>

        * added Windows DevStudio 6+ build workspace to easily build
        all required versions of the library.

        * much of scew/str.* rewritten to use compiler macros instead of
        separate functions. Means one less level of function calling and
        supports Unicode building on Windows simply.

        * scew/mem.* removed (functions now available through str.h)

        * added INSTALL.WIN32 file to describe building on Windows

**** Changes in version 0.3.0 ****

2003-07-16  Aleix Conchillo Flaque  <aleix@member.fsf.org>

        * src/element.c, src/xattribute.c: performance improvement by
	saving last index visited.

	* src (Module): Lots of fixes and improvements by Brodie
	Thiesfield.

**** Changes in version 0.2.1 ****
